# GroceryNana

./: CLAUDE.md  LEARN.md  README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/bindings/: HealthResponse.ts  HelloResponse.ts
backend/migrations/: 20240101000000_init.sql
backend/src/: main.rs
learn/: 01-understanding-vibe-coding.md  02-from-idea-to-tasks.md  03-working-with-llms.md  04-technical-foundation.md  05-development-workflow.md  06-testing-and-quality.md  07-infrastructure-deployment.md  08-real-world-application.md
webapp/: package.json  pnpm-lock.yaml
webapp/src/components/: Layout.tsx
webapp/src/components/ui/: button.tsx
webapp/src/pages/: HomePage.tsx
webapp/src/services/: api.ts
